<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="4dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autofill_hint_words_help"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="14sp" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:hint="@string/autofill_username_words">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/autofillUsernameWords"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:inputType="textMultiLine|textNoSuggestions"
            android:overScrollMode="always"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:hint="@string/autofill_password_words">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/autofillPasswordWords"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:inputType="textMultiLine|textNoSuggestions"
            android:overScrollMode="always"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
