<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/password_edit_share_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="48dp">

    <TextView
        android:id="@+id/share_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        tools:text="Receiver"
        android:textColor="@color/normal_text_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/allow_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/allow_edit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:contentDescription="@string/allow_editing"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/allow_reshare"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_edit_24"
        app:tint="@color/normal_text_color" />

    <ImageButton
        android:id="@+id/allow_reshare"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:contentDescription="@string/allow_resharing"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_share"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_share_outline_24"
        app:tint="@color/normal_text_color" />

    <ImageButton
        android:id="@+id/delete_share"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:contentDescription="@string/revoke_share"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_delete_24"
        app:tint="@color/normal_text_color" />

</androidx.constraintlayout.widget.ConstraintLayout>